# durabletask-python-mcp

./: .gitignore  DEMO_TALK_TRACK.md  README.md  demo_payloads.json  pyproject.toml
examples/: client.py  server.py  simple_server.py
mcp_dts/: __init__.py  server.py  store.py
src/client/: client.py  requirements.txt
src/mcp-server/: requirements.txt  server.py
